# sql-anon

./: .env.example  .gitignore  CLAUDE.md  README.md  implementation.md  pyproject.toml  railway.toml  svar.txt  test.sql
.github/workflows/: ci.yml
sql_anon/: anonymize.py  api.py  cli.py  config.py  deanonymize.py  explain.py
tests/: test_anonymize.py  test_api.py  test_cli.py  test_config.py  test_deanonymize.py  test_explain.py
